--- a/index_장예은.html
+++ b/index_장예은.html
@@ -61,7 +61,7 @@
       </div>
 
       <section id="gr_box" class="gr_box">
-        <img src="./my_photo.jpg" alt="me" />
+        <img src="./img/my_photo.jpg" alt="me" />
         <h2>프론트엔드 개발자</h2>
         <p>
           I develop <span>ideas</span> and help build a better world through
@@ -140,31 +140,31 @@
         <ul>
           <li>
             <div class="icon react">
-              <img src="./react.png" alt="react 사진" />
+              <img src="./img/react.png" alt="react 사진" />
             </div>
             <strong class="re">React</strong>
           </li>
           <li>
             <div class="icon nodejs">
-              <img src="./nodejs.png" alt="node.js 사진" />
+              <img src="./img/nodejs.png" alt="node.js 사진" />
             </div>
             <strong class="no">Node.js</strong>
           </li>
           <li>
             <div class="icon mysql">
-              <img src="./mysql.png" alt="mySQL 사진" />
+              <img src="./img/mysql.png" alt="mySQL 사진" />
             </div>
             <strong class="my">MySQL</strong>
           </li>
         </ul>
-        <img src="./my_char.jpg" alt="아바타 사진" />
+        <img src="./img/my_char.jpg" alt="아바타 사진" />
       </section>
     </div>
 
     <footer class="add_box">
       <div class="inner">
         <div>
-          <div class="footing"><img src="./card.png" alt="card" /></div>
+          <div class="footing"><img src="./img/card.png" alt="card" /></div>
           <h2>Do you have <span>any idea?</span></h2>
           <p style="padding-bottom: 10px">
             Let's build it. <span>together!</span>
@@ -172,15 +172,15 @@
           <span>yeeun7117@sookmyung.ac.kr</span>
           <div class="sns">
             <div class="tw">
-              <a href=""><img src="./tw.png" alt="트위터 사진" /></a>
+              <a href=""><img src="./img/tw.png" alt="트위터 사진" /></a>
             </div>
             <div class="in">
-              <a href=""><img src="./in.png" alt="인스타 사진" /></a>
+              <a href=""><img src="./img/in.png" alt="인스타 사진" /></a>
             </div>
           </div>
           <p class="foot">
             Developed by Ye-eun Jang | Design by<img
-              src="./rafo.png"
+              src="./img/rafo.png"
               alt="rafo"
             />
           </p>
