--- a/index_장예은.html
+++ b/index_장예은.html
@@ -20,7 +20,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="header_장예은.css" />
-    <script src="section.js"></script>
+    <script src="section.js" defer></script>
   </head>
   <body>
     <div class="wrap">
@@ -63,6 +63,7 @@
 
       <section id="pr_box" class="pr_box">
         <h2>Latest <span>Projects</span></h2>
+
         <div class="swiper slide1">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
